; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_update_settings.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_update_settings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.duplicator_capture = type { i32, float, i64, i64, i64, i64, i64, i32*, i32 }

@.str = private unnamed_addr constant [8 x i8] c"monitor\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"capture_cursor\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.duplicator_capture*, i32*)* @update_settings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_settings(%struct.duplicator_capture* %0, i32* %1) #0 {
  %3 = alloca %struct.duplicator_capture*, align 8
  %4 = alloca i32*, align 8
  store %struct.duplicator_capture* %0, %struct.duplicator_capture** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i64 @obs_data_get_int(i32* %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %7 = trunc i64 %6 to i32
  %8 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %9 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @obs_data_get_bool(i32* %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %12 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %13 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %12, i32 0, i32 8
  store i32 %11, i32* %13, align 8
  %14 = call i32 (...) @obs_enter_graphics()
  %15 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %16 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %15, i32 0, i32 7
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @gs_duplicator_destroy(i32* %17)
  %19 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %20 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %19, i32 0, i32 7
  store i32* null, i32** %20, align 8
  %21 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %22 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %21, i32 0, i32 6
  store i64 0, i64* %22, align 8
  %23 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %24 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %23, i32 0, i32 5
  store i64 0, i64* %24, align 8
  %25 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %26 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %25, i32 0, i32 4
  store i64 0, i64* %26, align 8
  %27 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %28 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %27, i32 0, i32 3
  store i64 0, i64* %28, align 8
  %29 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %30 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %29, i32 0, i32 2
  store i64 0, i64* %30, align 8
  %31 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %32 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %31, i32 0, i32 1
  store float 0.000000e+00, float* %32, align 4
  %33 = call i32 (...) @obs_leave_graphics()
  ret void
}

declare dso_local i64 @obs_data_get_int(i32*, i8*) #1

declare dso_local i32 @obs_data_get_bool(i32*, i8*) #1

declare dso_local i32 @obs_enter_graphics(...) #1

declare dso_local i32 @gs_duplicator_destroy(i32*) #1

declare dso_local i32 @obs_leave_graphics(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
